--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <!-- Don't delete this. It's needed for development workflow. -->
     <!-- inject:css -->
     <!-- endinject -->
+    <link rel="stylesheet" href="stylesheets/bundle.min.css">
 </head>
 
 <body>
