--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 <!-- Don't delete this. It's needed for development workflow. -->
 <!-- inject:js -->
 <!-- endinject -->
+<script src="javascripts/bundle.min.js"></script>
 
 </body>
 
