--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="swiper-wrapper">
         <div class="swiper-slide slide-1">
             <div class="item-image animated" data-ani-name="slideInLeft" data-ani-duration="1s" data-ani-delay="0s"></div>
-            <p class="item-text animated" data-ani-name="slideInRight" data-ani-duration="1s" data-ani-delay="0.3s">I'm a coder!</p>
+            <p class="item-text animated" data-ani-name="slideInRight" data-ani-duration="1s" data-ani-delay="0.3s">营销大数据应用分析培训，开班啦！</p>
         </div>
         <div class="swiper-slide slide-2">
             <div class="item-image animated" data-ani-name="bounceInDown" data-ani-duration="1s" data-ani-delay="0s"></div>
