--- a/index.html
+++ b/index.html
@@ -1,70 +1,240 @@
+
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Wechat H5 Boilerplate</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <!-- Add your keywords and description here for SEO. -->
-    <meta name="keywords" content="">
-    <meta name="description" content="">
-    <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
-
-    <!-- Uncomment this if you need apple touch icon. -->
-    <!--
-    <link rel="apple-touch-icon" href="touch-icon-iphone.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="touch-icon-ipad.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="touch-icon-iphone-retina.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="touch-icon-ipad-retina.png">
-    -->
-
-    <!-- Don't delete this. It's needed for development workflow. -->
-
-    <link rel="stylesheet" href="stylesheets/bundle.min.css">
+    <title>three.js css3d - panorama</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+    <style>
+        body {
+            margin: 0;
+            overflow: hidden;
+        }
+    </style>
 </head>
-
 <body>
-<div class="loading-overlay">
-    <img src="images/loading.svg">
-</div>
+<script src="three-r93.js"></script>
+<script src="CSS3DRenderer.js"></script>
 
-<div class="swiper-container">
-    <div class="swiper-wrapper">
-        <div class="swiper-slide slide-1">
-            <div class="item-image animated" data-ani-name="slideInLeft" data-ani-duration="1s" data-ani-delay="0s"></div>
-            <p class="item-text animated" data-ani-name="slideInRight" data-ani-duration="1s" data-ani-delay="0.3s">营销大数据应用分析培训，开班啦！</p>
-        </div>
-        <div class="swiper-slide slide-2">
-            <div class="item-image animated" data-ani-name="bounceInDown" data-ani-duration="1s" data-ani-delay="0s"></div>
-            <p class="item-text animated" data-ani-name="bounceInUp" data-ani-duration="1s" data-ani-delay="0.3s">I'm a frontend developer!</p>
-        </div>
-        <div class="swiper-slide slide-3">
-            <div class="item-image animated" data-ani-name="flipInX" data-ani-duration="1s" data-ani-delay="0s"></div>
-            <p class="item-text animated" data-ani-name="flipInY" data-ani-duration="1s" data-ani-delay="0.3s">I'm a javascript newbie!</p>
-        </div>
-        <div class="swiper-slide slide-4">
-            <div class="item-image animated" data-ani-name="flipInX" data-ani-duration="1s" data-ani-delay="0s"></div>
-            <p class="item-text animated" data-ani-name="flipInY" data-ani-duration="1s" data-ani-delay="0.3s">I'm a javascript newbie!</p>
-        </div>
-    </div>
-</div>
+<script>
 
-<button class="up-arrow">
-    <i class="icon-angle-double-up"></i>
-</button>
+    var camera, scene, renderer;
 
-<button class="btn-music">
-    <i class="icon-note"></i>
-</button>
+    /* 相机聚焦点 */
+    var target = new THREE.Vector3();
 
-<audio loop>
-    <source src="audios/background.mp3" type="audio/mpeg">
-</audio>
+    /* lon:经度， lat:维度  经纬度是相机的聚焦点 */
+    var lon = 90, lat = 0;
 
-<!-- Don't delete this. It's needed for development workflow. -->
+    /* 相机聚焦点，弧度制 */
+    var phi = 0, theta = 0;
 
-<script src="javascripts/bundle.min.js"></script>
+    /* 移动端输入的x,y */
+    var touchX, touchY;
 
+    /* 图片路径 */
+    //var src = 'par.front.jpg';
+    var src = 'dky.front.jpg';
+
+    /* 因为图片加载比较慢可以先设置一个背景图 */
+    document.body.style.backgroundImage = 'url('+src+")";
+    document.body.style.backgroundRepeat = 'no-repeat';
+    document.body.style.backgroundSize = window.innerWidth+'px '+window.innerHeight+'px';
+
+    var img = new Image();
+    img.src = src;
+
+    /* 图片加载完之后调用 */
+    img.onload = function () {
+
+        init(img.width, src);
+        animate();
+
+    };
+
+    function init(width, imageSrc) {
+
+        img = null;
+
+        camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 1, 1000);
+
+        scene = new THREE.Scene();
+
+        /* 图片路径 */
+        let src = imageSrc.substring(0, imageSrc.indexOf('.') + 1);
+
+        /* 图片格式 */
+        let format = imageSrc.slice(imageSrc.lastIndexOf('.'));
+
+        /* 以下六个面 拼接成立方体 */
+        var sides = [
+            {
+                url: src + 'left' + format,
+                position: [-width / 2, 0, 0], /* 左 */
+                rotation: [0, Math.PI / 2, 0]
+            },
+            {
+                url: src + 'right' + format,
+                position: [width / 2, 0, 0], /* 右 */
+                rotation: [0, -Math.PI / 2, 0]
+            },
+            {
+                url: src + 'top' + format,
+                position: [0, width / 2, 0], /* 上 */
+                rotation: [Math.PI / 2, 0, Math.PI]
+            },
+            {
+                url: src + 'bottom' + format,
+                position: [0, -width / 2, 0], /* 下 */
+                rotation: [-Math.PI / 2, 0, Math.PI]
+            },
+            {
+                url: src + 'back' + format,
+                position: [0, 0, width / 2], /* 后 */
+                rotation: [0, Math.PI, 0]
+            },
+            {
+                url: src + 'front' + format,
+                position: [0, 0, -width / 2], /* 前 */
+                rotation: [0, 0, 0]
+            }
+        ];
+
+        for (var i = 0; i < sides.length; i++) {
+
+            var side = sides[i];
+
+            var element = document.createElement('img');
+
+            element.width = width + 6;
+            element.src = side.url;
+
+            var css3Loader = new THREE.CSS3DObject(element);
+            css3Loader.position.fromArray(side.position);
+            css3Loader.rotation.fromArray(side.rotation);
+
+            scene.add(css3Loader);
+
+        }
+
+        renderer = new THREE.CSS3DRenderer();
+        renderer.setSize(window.innerWidth, window.innerHeight);
+        document.body.appendChild(renderer.domElement);
+
+
+        document.addEventListener('mousedown', onDocumentMouseDown, false);
+        document.addEventListener('wheel', onDocumentMouseWheel, false);
+
+        document.addEventListener('touchstart', onDocumentTouchStart, false);
+        document.addEventListener('touchmove', onDocumentTouchMove, false);
+
+        window.addEventListener('resize', onWindowResize, false);
+
+    }
+
+    function onWindowResize() {
+
+        camera.aspect = window.innerWidth / window.innerHeight;
+        camera.updateProjectionMatrix();
+
+        renderer.setSize(window.innerWidth, window.innerHeight);
+
+    }
+
+    function onDocumentMouseDown(event) {
+
+        event.preventDefault();
+
+        document.body.style.cursor = 'move';
+
+        document.addEventListener('mousemove', onDocumentMouseMove, false);
+        document.addEventListener('mouseup', onDocumentMouseUp, false);
+
+    }
+
+    function onDocumentMouseMove(event) {
+
+        var movementX = event.movementX || event.mozMovementX || event.webkitMovementX || 0;
+        var movementY = event.movementY || event.mozMovementY || event.webkitMovementY || 0;
+
+        /* 拖动速度随相机视角的变动而变动 */
+        var speed = camera.fov * 0.0035;
+
+        /* 经纬度平移速度 */
+        lon -= movementX * speed;
+        lat += movementY * speed;
+
+
+    }
+
+    function onDocumentMouseUp(event) {
+
+        event.preventDefault();
+
+        document.body.style.cursor = 'auto';
+
+        document.removeEventListener('mousemove', onDocumentMouseMove);
+        document.removeEventListener('mouseup', onDocumentMouseUp);
+
+    }
+
+    function onDocumentMouseWheel(event) {
+
+        /* 缩放速度 */
+        var speed = 0.008;
+
+        var fov = camera.fov + event.deltaY * speed;
+
+        /* 角度缩放最值 */
+        camera.fov = THREE.Math.clamp(fov, 45, 95);
+
+        camera.updateProjectionMatrix();
+
+    }
+
+    function onDocumentTouchStart(event) {
+
+        event.preventDefault();
+
+        var touch = event.touches[0];
+
+        touchX = touch.screenX;
+        touchY = touch.screenY;
+
+    }
+
+    function onDocumentTouchMove(event) {
+
+        event.preventDefault();
+
+        var touch = event.touches[0];
+
+        lon -= (touch.screenX - touchX) * 0.1;
+        lat += (touch.screenY - touchY) * 0.1;
+
+        touchX = touch.screenX;
+        touchY = touch.screenY;
+
+    }
+
+    function animate() {
+
+        requestAnimationFrame(animate);
+
+        lat = Math.max(-85, Math.min(85, lat));
+        phi = THREE.Math.degToRad(90 - lat);
+        theta = THREE.Math.degToRad(lon);
+
+        target.x = Math.sin(phi) * Math.cos(theta);
+        target.y = Math.cos(phi);
+        target.z = Math.sin(phi) * Math.sin(theta);
+
+        camera.lookAt(target);
+
+        renderer.render(scene, camera);
+
+    }
+
+</script>
 </body>
-
 </html>
